Enabling gh pages

--- a/visualisations.html
+++ b/visualisations.html
@@ -32,7 +32,7 @@
     const engine = new BABYLON.Engine(canvas, true);
 
     // here the doc for Load function: //doc.babylonjs.com/api/classes/babylon.sceneloader#load
-    BABYLON.SceneLoader.Load("", "https://github.com/PawelRebisz/visualisations/raw/master/models/ZaciszeKajetany_export.glb", engine, function (scene) {
+    BABYLON.SceneLoader.Load("", "https://pawelrebisz.github.io/visualisations/models/ZaciszeKajetany_export.glb", engine, function (scene) {
         scene.createDefaultCamera(true, true, true);
         scene.createDefaultEnvironment({
             createGround: false,
